# PlotJuggler

./: CMakeLists.txt  package_qt_dll.bat
plotjuggler_app/: main.cpp  mainwindow.cpp  preferences_dialog.ui
plotjuggler_plugins/DataLoadAPBin/: CMakeLists.txt  ReadMe.md  apbinlog.ui  dataload_apbin.cpp  dataload_apbin.h  logformat.h
